feat: add Popular Courses feature and update Course model
- Added a new Popular Courses page to display the most popular courses.
- Updated Sidebar component to include a link to the Popular Courses page.
- Enhanced Course model with new fields: category, difficulty_level, estimated_duration, thumbnail, and is_popular.
- Implemented a management command to seed the database with popular courses.
- Updated CourseViewSet to support filtering and searching by category and difficulty level.
- Adjusted migrations to reflect changes in the Course model.
- Added environment variable definitions for Vite.
- Refactored progress bar styles in various pages for consistency.

--- a/notebooks/learn-path-model.ipynb
+++ b/notebooks/learn-path-model.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "d50c3d2e",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
     }
    ],
    "source": [
-    "!pip install ollama\n"
+    "%pip install ollama\n"
    ]
   },
   {
